--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,11 @@
 {
-  "name": "learning_words",
-  "description": "Web app used to learn new foreing words",
-  "main": "index.js",
-  "authors": [
-    "olegzhermal <olegzhermal@gmail.com>"
-  ],
-  "license": "MIT",
-  "homepage": "",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "name": "learning_foreign_words",
+  "version": "0.0.0",
   "dependencies": {
-    "react": "^15.3.1"
+    "react": "^15.3.1",
+    "babel": "^5.8.38",
+    "jquery": "^3.1.0",
+    "bootstrap": "^3.3.7",
+    "react-bootstrap-table": "^2.0.7"
   }
 }
