--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "learning_words",
-  "version": "1.0.0",
+  "name": "learning_foreign_words",
+  "version": "0.0.0",
   "description": "Web app used to learn new foreing words",
   "main": "index.js",
   "scripts": {
@@ -11,8 +11,11 @@
   "author": "olegzhermal <olegzhermal@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "co-body": "^4.2.0",
+    "dot": "^1.0.3",
     "koa": "^1.2.4",
     "koa-mongo": "^0.6.0",
+    "koa-mount": "^1.3.0",
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
     "mongodb": "^2.2.9"
