--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "babel": "^5.8.38",
     "jquery": "^3.1.0",
     "bootstrap": "^3.3.7",
-    "react-bootstrap-table": "^2.0.7"
+    "react-bootstrap-table": "^2.0.7",
+    "moment": "^2.15.0"
   }
 }
