--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-mount": "^1.3.0",
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
+    "moment": "^2.15.0",
     "mongodb": "^2.2.9"
   }
 }
