--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nf start"
+    "start": "nf start",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "keywords": [],
   "author": "olegzhermal <olegzhermal@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bower": "^1.7.9",
     "co-body": "^4.2.0",
     "dot": "^1.0.3",
     "koa": "^1.2.4",
